data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_810.wast
;; 1. **Empty Loop with Inconsistent Branch**:    Create a loop block that is empty but contains a branch (`br 0`) targeting its label, which should be valid but not execute any instructions.    Constraint: Ensure proper handling of empty instruction sequences and corresponding branches.    Expected: Correct unwinding and branch recognition should result in exiting the loop without error.

(assert_invalid
  (module
    (func (loop) (br 0) end)
  )
  "type mismatch"
)